@@ -86,9 +86,9 @@ public abstract class ChestplateFossilFishItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new ModelFossilFishArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelFossilFishArmor.LAYER_LOCATION)).bone,
-							"left_arm", new ModelFossilFishArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelFossilFishArmor.LAYER_LOCATION)).bone, "right_arm",
-							new ModelFossilFishArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelFossilFishArmor.LAYER_LOCATION)).bone, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new ModelFossilFishArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelFossilFishArmor.LAYER_LOCATION)).bipedBody,
+							"left_arm", new ModelFossilFishArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelFossilFishArmor.LAYER_LOCATION)).bipedRightArm, "right_arm",
+							new ModelFossilFishArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelFossilFishArmor.LAYER_LOCATION)).bipedLeftArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
